Fix graphical bug where height of console was too large

--- a/main.css
+++ b/main.css
@@ -75,7 +75,6 @@ img {
   padding-top: 15px;
   font-size: 30px;
   background: #ccc;
-  height: 500px;
   font-family: 'Monaco', 'Courier New';
   text-align: left;
   font-size: 13px;
